@@ -9,5 +9,6 @@ Chris Hibbert
 Aaron Levinson
 Oliver Collyer
 Anthony Delannoy
+Martin Frétigné
 
 If you wish to contribute, please see https://tsduck.io/doxy/contributing.html
